# deescm

./: .gitignore  README.md  db.sqlite3  main.py  manage.py  pyproject.toml
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_repoforksmodel_repoissuemodel_repostarsmodel.py  0002_repomodel.py  0003_alter_repoobjectmodel_repo_link.py  0003_repomodel_repo_description_repomodel_repo_name_and_more.py  0004_alter_repoobjectmodel_upload.py  0004_repoobjectmodel_repomodel_repo_object_link.py  0005_remove_repomodel_repo_object_link_and_more.py  0005_remove_repoobjectmodel_upload_and_more.py  0006_alter_repoobjectmodel_repo_link.py  0007_alter_repoobjectmodel_repo_link.py  0008_repoobjectmodel_branch.py  0009_repoobjectmodel_created_at.py
deescm/: asgi.py  settings.py  urls.py  wsgi.py
templates/: file_detail.html  homepage.html  index.html  login_signup.html  modal.html  myrepos.html  profile.html  repopage.html
